# pedomet-rs

./: .gitmodules
hardware/housing/: pedomet-rs_housing.FCStd
software/pedomet-rs_common/: Cargo.toml
software/pedomet-rs_common/src/: lib.rs
software/pedomet-rs_fw/: Cargo.toml  memory.x
software/pedomet-rs_fw/.cargo/: config.toml
software/pedomet-rs_fw/src/: error.rs  fmt.rs  imu.rs  main.rs  storage_event_queue.rs
software/pedomet-rs_gui/: .env  .gitignore  .project  Cargo.toml  README.md
software/pedomet-rs_gui/app/: .project  build.gradle
software/pedomet-rs_gui/app/src/main/: AndroidManifest.xml
software/pedomet-rs_gui/app/src/main/java/: com  io
software/pedomet-rs_gui/app/src/main/java/de/derfetzer/pedometrs/: MainActivity.java
software/pedomet-rs_gui/app/src/main/res/: README.md
software/pedomet-rs_gui/app/src/main/res/layout/: activity_main.xml
software/pedomet-rs_gui/app/src/main/res/values/: themes.xml
software/pedomet-rs_gui/app/src/main/res/values-night/: themes.xml
software/pedomet-rs_gui/migrations/: 20241102112824_init.sql
software/pedomet-rs_gui/src/: android.rs  ble.rs  error.rs  gui.rs  lib.rs  persistence.rs  runtime.rs
