[package]
name = "pedomet-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pedomet-rs_common = { path = "../pedomet-rs_common", features = ["std"] }
log = "0.4"
winit = { version = "0.30", features = [ "android-game-activity" ] }
wgpu = "23.0.0"
pollster = "0.4"
egui = "0.29"
eframe = { version = "0.29", features = [ "wgpu", "android-game-activity" ] }
tokio = { version = "1.41.0", features = ["full"] }
btleplug = "0.11.6"
uuid = "1.11.0"
futures = "0.3.31"
jni = "0.19.0"
jni-utils = "0.1.1"
thiserror = "1.0.65"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[features]
default = []
desktop = []

[lib]
name="pedometrs"
crate-type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="pedomet-rs"
required-features = [ "desktop" ]
