[package]
name = "pedomet-rs"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pedomet-rs_common = { path = "../pedomet-rs_common", features = ["std"] }
log = "0.4"
winit = { version = "0.30", features = [ "android-game-activity" ] }
egui = "0.29"
eframe = { version = "0.29", features = [ "wgpu", "android-game-activity", "persistence" ] }
tokio = { version = "1.41.0", features = ["full"] }
btleplug = "0.11.6"
uuid = "1.11.0"
futures = "0.3.31"
jni = "0.19.0"
jni-utils = "0.1.1"
thiserror = "1.0.65"
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio", "macros", "migrate", "sqlite"] }
serde = { version = "1.0.214", features = ["derive"] }
app_dirs2 = "2.5.5"
anyhow = "1.0.92"
strum = { version = "0.26.3", features = ["derive"] }
egui_extras = { version = "0.29.1", features = ["datepicker", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
egui_plot = { version = "0.29.0", features = ["serde"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"

[profile.dev.package.sqlx-macros]
opt-level = 3

[features]
default = []
desktop = []

[lib]
name="pedometrs"
crate-type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="pedomet-rs"
required-features = [ "desktop" ]
